app.css
/* ... */
.apply_now_mid .btn_apply_now {
  font-family: "Roboto", sans-serif;
  padding: 0.8em 1.5em;
  color: #49928f;
  text-decoration: none;
  border-radius: 2em;
  border: none;
  outline: none;
  font-weight: bold;
  box-shadow: #02c4ff 0px 0.25px 5px;
  background-color: #fff;
  transition: background-color 0.3s ease-in-out;
}

.apply_now_mid .btn_apply_now a {
  color: #49928f;
  text-decoration: none;
  font-size: 1.2em;
  padding: 2em 3em;
}

/* .apply_now_mid .btn_apply_now:hover {
  background-color: #e0e0e0;
  color: #333;
} */

/* About Us and Admission Styles Ends Here */

/* Programs style Begins Here */

#programs {
  padding: 2em;
  max-width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2em;
}

#programs h3 {
  font-family: "Roboto", sans-serif;
  font-weight: bold;
  font-size: 2em;
  color: #333;
  margin-bottom: 1em;
  text-align: center;
}

#programs a {
  text-decoration: none;
}

.program {
  background-color: #f5f5f5;
  padding: 1.5em;
  border-radius: 1em;
  box-shadow: #02c4ff 0px 0.25px 1.25px;
}
.program h4 {
  font-family: "Roboto", sans-serif;
  font-weight: bold;
  font-size: 1.5rem;
  color: #333;
  margin-bottom: 1em;
  text-align: center;
}

.program p {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-size: 1.2em;
  color: #666;
  line-height: 1.25em;
  text-align: center;
  max-width: 100%;
  margin: 0 auto;
  padding-top: 1.25em;
}

#programs .program img {
  width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
  border-radius: 1em;
}

#programs span {
  margin: 0 auto;
  text-align: center;
  font-size: 16px;
  border: 0.25 solid black;
  border-radius: 1rem;
  padding: 0 1em;
  font-weight: 400;
}

#programs .program:nth-of-type(1) span {
  background-color: rgb(234, 163, 163);
  color: red;
}
#programs .program:nth-of-type(2) span {
  background-color: rgb(170, 215, 255);
  color: blue;
}
#programs .program:nth-of-type(3) span {
  background-color: rgb(137, 252, 198);
  color: green;
}
/* Programs style Ends Here */

/* Facilities style begins Here */

#facilities {
  padding: 1em 2em;
  max-width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2em;
}

#facility h4 {
  font-family: "Roboto", sans-serif;
  font-weight: bold;
  font-size: 2em;
  color: #333;
  margin-bottom: 1em;
  text-align: center;
}

.facility {
  background-color: #f5f5f5;
  padding: 1.5em;
  border-radius: 1em;
  box-shadow: #02c4ff 0px 0.25px 1.25px;
  margin-bottom: 2em;
}
.facility h4 {
  font-family: "Roboto", sans-serif;
  font-weight: bold;
  font-size: 1.5em;
  color: #333;
  margin-bottom: 1em;
  text-align: center;
}

.facility p {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-size: 1.2em;
  color: #666;
  line-height: 1.25em;
  text-align: center;
  max-width: 100%;
  margin: 0 auto;
  padding-top: 1.25em;
}

#facilities .facility img {
  width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
  border-radius: 1em;
  background-color: #f5f5f5;
}

/* Facilities style Ends Here */

/* Contact Us Styles Begins Here */

#home_contact_us {
  text-align: center;
  margin: 5em auto;
}

#home_contact_us h2 {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  max-width: 50%;
  margin: 1em auto;
}

input {
  margin: 1em auto;
  border: none;
  outline: tomato;
}

input:focus {
  border-bottom: 1px solid black;
  outline: none;
}

input::placeholder {
  color: #02c4ff;
  font-family: "Roboto", sans-serif;
  font-size: 1rem;
}

/* form button:hover {
  background-color: #e0e0e0;
} */

#home_contact_us button {
  color: #49928f;
  font-family: "Roboto", sans-serif;
}

#home_contact_us button {
  font-family: "Roboto", sans-serif;
  font-size: 1em;
  padding: 0.8em 1.5em;
  color: #49928f;
  text-decoration: none;
  border-radius: 2em;
  border: none;
  outline: none;
  margin-top: 5em;
  font-weight: bold;
  box-shadow: #02c4ff 0px 0.25px 5px;
  background-color: #fff;
  transition: background-color 0.3s ease-in-out;
}

/* #home_contact_us button:hover {
  background-color: #e0e0e0;
  color: #333;
  cursor: pointer;
} */

form label {
  border-bottom: 1.5px solid black;
}

/* Contact Us Styles Ends Here */

footer {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 2em;
  background-color: #02c4ff;
  border-bottom-left-radius: 3em;
  box-shadow: #02c4ff 0px 0px 50px 0px;
}

footer a,
footer p {
  text-decoration: none;
  color: white;
}

footer ul li {
  margin: 1em;
  display: flex;
  flex-direction: column;
}

/* EARLY CHILDHOOD EDUCATION STYLING  */

main .ece_hero {
  background-color: #49928f;
  background-image: url(./images/classroom\ copy.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  border-bottom-left-radius: 5em;
  border-bottom-right-radius: 0.25em;
  padding-bottom: 1em;
  box-shadow: #02c4ff 0px 0px 25px 5px;
}

.ece_hero .ece {
  color: #fff;
  font-family: "Roboto", sans-serif;
  margin-bottom: 0.5em;
  font-size: 0.75em;
  border: 1 solid black;
  border-radius: 2em;
  padding: 0.5em 1em;
  background-color: rgb(130, 124, 124);
}

.ece_hero_content {
  margin-top: 5em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 100%;
  padding-bottom: 5em;
}

.ece_hero h1 {
  font-family: "Roboto", sans-serif;
  font-size: 2.5em;
  font-weight: 500;
  color: #fff;
  margin: 0 auto;
  max-width: 100%;
  text-align: center;
  padding: 0.25em;
  letter-spacing: 3px;
}

.ece_hero_content p {
  font-size: 1em;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  color: #fff;
  max-width: 610px;
  text-align: center;
  margin: 1em;
  line-height: 1.25em;
}
/* ... */

